# rfce

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: bits.rs  fc.rs  gui.rs  main.rs
src/fc/: cpu.rs  dbg.rs  input.rs  mem.rs  mod.rs  ppu.rs
src/fc/cpu/: inst.rs
src/fc/mem/: cart.rs  mapper.rs
src/fc/mem/mapper/: mmc1.rs  nrom.rs
src/fc/ppu/: sprite.rs  tile.rs
src/gui/: gl_renderer.rs
