[package]
name = "rfce"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.6"
num-traits = "0.2.19"
sdl2 = "0.37.0"
imgui-rs = "1.47.0"
imgui-sdl2-support = "0.13.0"
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
glow = "0.16.0"
rfd = "0.15.2"
image = "0.25.5"
rgb = "0.8.50"

[profile.dev]
overflow-checks = false
