[package]
name = "rfce"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.22"
env_logger = "0.11.6"
num-traits = "0.2.19"
rfd = "0.15.2"
image = { version = "0.25.5", default-features = false, features = ["png"] }
rgb = "0.8.50"
rustc-hash = "2.1.0"
sdl3 = "0.18.4"

[profile.dev]
overflow-checks = false
