[package]
name = "rfce"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.33"
env_logger = "0.11.11"
num-traits = "0.2.19"
rfd = "0.17.2"
image = { version = "0.25.10", default-features = false, features = ["png"] }
rgb = "0.8.53"
rustc-hash = "2.1.3"
sdl3 = { version = "0.18.4", features = ["unsafe_textures"] }

[profile.dev]
overflow-checks = false
